// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemContainer should render properly and trigger onClick when clicking on item 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-width: 40px;
  height: 40px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  pointer-events: initial;
  background-color: colorBackgroundDropdownItemDefault;
  border-top: 1px solid colorBorderDividerDefault;
}

.c0:hover {
  background-color: colorBackgroundDropdownItemHover;
}

.c0:first-of-type {
  border-top: 0;
}

<div>
  <div
    class="c0"
    data-testid="item1-uuid"
  />
</div>
`;

exports[`ItemContainer should render properly and trigger onClick when clicking on sub item 1`] = `
.c2 {
  shape-rendering: geometricPrecision;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-width: 40px;
  height: 40px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  pointer-events: initial;
  background-color: colorBackgroundDropdownItemDefault;
  border-top: 1px solid colorBorderDividerDefault;
}

.c0:hover {
  background-color: colorBackgroundDropdownItemHover;
}

.c0:first-of-type {
  border-top: 0;
}

.c7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-width: 40px;
  height: 40px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  pointer-events: none;
  background-color: colorBackgroundItemSelected;
  border-top: 1px solid colorBorderDividerDefault;
}

.c7:first-of-type {
  border-top: 0;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 40px;
  height: 40px;
}

.c5 {
  display: none;
  position: absolute;
  left: 100%;
  top: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: colorBackgroundDropdownItemDefault;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 1;
}

.c5 > div {
  border-top: 1px solid colorBorderDividerDefault;
}

.c5 > div:first-of-type {
  border-top: 0;
}

.c3 {
  padding: 0 20px 0 0px;
  white-space: nowrap;
}

.c6 {
  padding: 0 20px 0 20px;
  white-space: nowrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 6px;
}

<div>
  <div
    class="c0"
    data-testid="item1-uuid"
  >
    <div
      class="c1"
    >
      <span
        aria-label="item1"
        role="img"
        title="item1"
      >
        <div
          class="c2"
          data-mocked="Icon"
          name="add-plus"
          variant="normal"
        />
      </span>
    </div>
    <div
      class="c3"
      color="inherit"
      data-mocked="Box"
      leftpadding="0"
      variant="small"
    >
      item1 text
    </div>
    <div
      class="c4"
    >
      <div
        class="c2"
        data-mocked="Icon"
        name="caret-right-filled"
      />
    </div>
    <div
      class="c5"
    >
      <div
        class="c0"
        data-testid="item2-uuid"
      >
        <div
          class="c1"
        >
          <span
            aria-label="item2"
            role="img"
            title="item2"
          >
            <div
              class="c2"
              data-mocked="Icon"
              name="add-plus"
              variant="normal"
            />
          </span>
        </div>
        <div
          class="c3"
          color="inherit"
          data-mocked="Box"
          leftpadding="0"
          variant="small"
        >
          item2 text
        </div>
      </div>
      <div
        class="c0"
        data-testid="item3-uuid"
      >
        <div
          class="c6"
          color="inherit"
          data-mocked="Box"
          variant="small"
        >
          item3 text
        </div>
        <div
          class="c4"
        >
          <div
            class="c2"
            data-mocked="Icon"
            name="caret-right-filled"
          />
        </div>
        <div
          class="c5"
        >
          <div
            class="c7"
            data-testid="item4-uuid"
          >
            <div
              class="c6"
              color="inherit"
              data-mocked="Box"
              variant="small"
            >
              item4 text
            </div>
          </div>
          <div
            class="c0"
            data-testid="item5-uuid"
          >
            <div
              class="c6"
              color="inherit"
              data-mocked="Box"
              variant="small"
            >
              item5 text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemContainer should render when feature is enabled 1`] = `
.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-width: 40px;
  height: 40px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  pointer-events: initial;
  background-color: colorBackgroundDropdownItemDefault;
  border-top: 1px solid colorBorderDividerDefault;
}

.c0:hover {
  background-color: colorBackgroundDropdownItemHover;
}

.c0:first-of-type {
  border-top: 0;
}

<div>
  <div
    class="c0"
    data-testid="item1-uuid"
  />
</div>
`;
